emp-app/k8s_manifest/ingress-controller-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: emp-mng-system.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emp-mng-system
                port:
                  number: 8080
